trying to diagnose overflow issues

--- a/laab/src/faqs.css
+++ b/laab/src/faqs.css
@@ -67,6 +67,10 @@ left: -50px;
 
 /* Mobile (500px – 767px) */
 @media (max-width: 767px) {
+   html, body {
+    overflow-x: hidden;
+  }
+  
   .faqsAnim {
     width: 350px;
     height: 350px;
